--- a/client/app.json
+++ b/client/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/login/login",
     "pages/index/index",
     "pages/analyse/analyse",
     "pages/home/home",
@@ -17,7 +18,6 @@
     "navigationBarBackgroundColor": "#F6F6F6",
     "navigationBarTitleText": "Wafer Quick Start",
     "navigationBarTextStyle": "black"
-  }
-  ,
+  },
   "cloud": true
 }
