--- a/project.config.json
+++ b/project.config.json
@@ -8,5 +8,6 @@
 	},
 	"appid": "wx56811dc53f14976d",
 	"projectname": "OJ%E5%9C%A8%E7%BA%BF%E9%A2%98%E8%A7%A3",
-	"condition": {}
+	"condition": {},
+  "cloudfunctionRoot": "./cloud/"
 }
